added styling to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,3 +31,13 @@ h2 {
 #contact {
     background-color: white;
 }
+
+#hero {
+    background-image: url("../images/background.webp");
+    background-size: cover;
+    background-position: 50% 70%;
+    min-height: 500px;
+    padding: 5% 7%;
+    background-color: #dbdcde;;
+
+}
